<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/back_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"
        android:padding="10dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/student"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textHello"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@id/textHello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textHello"
            app:tint="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMenu">

            <EditText
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="search"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_search"
                android:contentDescription="@string/app_name"
                android:padding="1dp"
                android:src="@drawable/ic_search"
                app:tint="@color/Orange" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="430dp"
        android:layout_height="577dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Email"
                android:layout_width="419dp"
                android:layout_height="42dp"
                android:layout_marginTop="100dp"
                android:background="@color/Orange"
                android:text="E-mail : tier1support@utech.edu.jm"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintDimensionRatio="M,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutAppointment" />

            <ImageButton
                android:id="@+id/layoutGoal"
                android:layout_width="223dp"
                android:layout_height="196dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="226dp"
                android:layout_marginBottom="351dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/interview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="187dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="154dp"
                android:layout_marginEnd="230dp"
                android:layout_marginBottom="363dp"
                android:gravity="center"
                android:text="@string/have_a_meeting"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/layoutSubmit"
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="351dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="199dp"
                android:layout_height="32dp"
                android:layout_marginStart="213dp"
                android:layout_marginTop="162dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="363dp"
                android:gravity="center"
                android:text="@string/submit_assignment"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/layoutAppointment"
                android:layout_width="215dp"
                android:layout_height="210dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="199dp"
                android:layout_marginEnd="227dp"
                android:layout_marginBottom="142dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/deadline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="194dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="359dp"
                android:layout_marginEnd="228dp"
                android:layout_marginBottom="158dp"
                android:gravity="center"
                android:text="@string/schedule_meeting"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/layoutExit"
                android:layout_width="218dp"
                android:layout_height="208dp"
                android:layout_marginStart="208dp"
                android:layout_marginTop="202dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="143dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="184dp"
                android:layout_height="35dp"
                android:layout_marginStart="215dp"
                android:layout_marginTop="364dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="158dp"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/chatBot"
                android:layout_width="63dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="84dp"
                android:src="@drawable/ic_baseline_chat_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="M,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.762"
                app:layout_constraintStart_toEndOf="@id/layoutAppointment"
                app:layout_constraintTop_toBottomOf="@id/layoutExit"
                app:layout_constraintVertical_bias="0.062" />

            <TextView
                android:id="@+id/Contact"
                android:layout_width="417dp"
                android:layout_height="33dp"
                android:layout_marginTop="68dp"
                android:background="@color/Orange"
                android:text="Call us : (876) 970-5836 / (876) 970-5197"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintDimensionRatio="M,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutAppointment" />


        </androidx.constraintlayout.widget.ConstraintLayout>/


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>