<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_Tutor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_color"
        android:padding="10dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SelectTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="Select Your Lecturer"
            android:textColor="@color/Orange"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="430dp"
        android:layout_height="577dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/layoutmrWhite"
                android:layout_width="176dp"
                android:layout_height="147dp"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="231dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/male"
                app:layout_constraintDimensionRatio="M,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/layoutmrClarke"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="151dp"
                android:layout_height="26dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="122dp"
                android:layout_marginEnd="260dp"
                android:layout_marginBottom="434dp"
                android:text="@string/mr_white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/layoutmrClarke"
                android:layout_width="175dp"
                android:layout_height="143dp"
                android:layout_marginStart="231dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="436dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/clarke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:layout_width="165dp"
                android:layout_height="29dp"
                android:layout_marginStart="224dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="29dp"
                android:layout_marginBottom="438dp"
                android:text="Mr Clarke"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <ImageButton
                android:id="@+id/layoutMuir"
                android:layout_width="175dp"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="165dp"
                android:layout_marginEnd="245dp"
                android:layout_marginBottom="283dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/female"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="166dp"
                android:layout_height="24dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="278dp"
                android:layout_marginEnd="251dp"
                android:layout_marginBottom="286dp"
                android:gravity="center"
                android:text="@string/ms_muir"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/layoutPanther"
                android:layout_width="174dp"
                android:layout_height="140dp"
                android:layout_marginStart="231dp"
                android:layout_marginTop="163dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="285dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/panther"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="158dp"
                android:layout_height="32dp"
                android:layout_marginStart="237dp"
                android:layout_marginTop="274dp"
                android:layout_marginEnd="29dp"
                android:layout_marginBottom="278dp"
                android:gravity="center"
                android:text="@string/mr_panther"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/layoutIan"
                android:layout_width="178dp"
                android:layout_height="159dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="322dp"
                android:layout_marginEnd="242dp"
                android:layout_marginBottom="108dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/clarke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="177dp"
                android:layout_height="38dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="446dp"
                android:layout_marginEnd="238dp"
                android:layout_marginBottom="105dp"
                android:gravity="center"
                android:text="@string/mr_mcgowan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/layoutShaw"
                android:layout_width="171dp"
                android:layout_height="161dp"
                android:layout_marginStart="234dp"
                android:layout_marginTop="322dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="107dp"
                android:background="@drawable/white_rectangle_background"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                android:src="@drawable/female"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="164dp"
                android:layout_height="27dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="453dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="110dp"
                android:gravity="center"
                android:text="@string/mrs_facey_shaw"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>